add accessibility for links

--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,12 @@
         <div class="flex flex-row justify-center text-5xl">
             <div class="mr-8">
                 <a href="https://twitter.com/techwithattila">
-                    <i class="fa-brands fa-twitter" style="color: rgb(29, 155, 240);"></i>
+                    <i class="fa-brands fa-twitter" aria-label="Twitter" style="color: rgb(29, 155, 240);"></i>
                 </a>
             </div>
             <div>
                 <a href="https://www.youtube.com/@techwithattila">
-                    <i class="fa-brands fa-youtube" style="color: #f00"></i>
+                    <i class="fa-brands fa-youtube" aria-label="YouTube" style="color: #f00"></i>
                 </a>
             </div>
         </div>
